--- a/about.html
+++ b/about.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About VEXOR | Independent Workforce Audit Practice</title>
-  <meta name="description" content="VEXOR is an independent workforce audit practice providing objective employee, team, and organizational capability evaluations." />
+  <title>About VEXOR | Independent Workforce & Capability Audit Firm</title>
+  <meta name="description"
+    content="VEXOR is an independent audit firm providing objective workforce, team, and organizational capability evaluations for leadership decision-making." />
 
-  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
   <style>
     :root {
       --bg-dark: #0f1115;
@@ -31,7 +34,8 @@
       line-height: 1.7;
     }
 
-    header, section {
+    header,
+    section {
       padding: 60px 6%;
     }
 
@@ -84,10 +88,10 @@
     }
 
     .container {
-  max-width: 1100px;
-  margin: 0 auto;
-  padding: 0 24px;
-}
+      max-width: 1100px;
+      margin: 0 auto;
+      padding: 0 24px;
+    }
 
 
 
@@ -124,153 +128,157 @@
     }
   </style>
 </head>
+
 <body>
 
-<div id="header"></div>
+  <div id="header"></div>
 
-<header>
-  <div class="container">
-    <h1>About VEXOR</h1>
-    <p>
-      VEXOR is an independent workforce audit practice focused on objective capability evaluation,
-      execution risk identification, and organizational readiness assessment across employees, teams, and organizations.
-    </p>
-  </div>
-</header>
-
-
-<section>
-  <div class="container">
-    <div class="card">
-      <h2>What We Do</h2>
+  <header>
+    <div class="container">
+      <h1>About VEXOR</h1>
       <p>
-        VEXOR conducts structured audits of individuals, teams, and organizations to determine
-        whether people, roles, and responsibilities are aligned with real execution demands.
-      </p>
-      <p>
-        Our evaluations go beyond resumes, designations, and self-reported performance.
-        We assess actual capability depth, decision-making maturity, dependency risks,
-        and readiness for defined operating conditions.
-      </p>
-      <p>
-        VEXOR audits deliver structured findings, risk indicators, and decision inputs — not implementation mandates or advisory ownership.
+        VEXOR is an independent workforce audit practice focused on objective capability evaluation,
+        execution risk identification, and organizational readiness assessment across employees, teams, and
+        organizations.
       </p>
     </div>
-  </div>
-</section>
+  </header>
 
-<section>
-  <div class="container">
-    <h2>Why VEXOR Exists</h2>
-    <p>
-      Modern organizations make critical decisions based on financial reports,
-      operational metrics, and market data — yet workforce capability is often
-      assumed rather than verified.
-    </p>
-    <p>
-      VEXOR was established to address this gap —
-      providing leadership with an objective view of whether people, roles,
-      and structures are capable of supporting stated goals.
-    </p>
-    <p>
-      Our work exists for organizations that value truth over comfort
-      and clarity over assumption.
-    </p>
-  </div>
-</section>
 
-<section>
-  <div class="container">
-    <div class="card">
-      <h2>Who Engages VEXOR</h2>
+  <section>
+    <div class="container">
+      <div class="card">
+        <h2>What We Do</h2>
+        <p>
+          VEXOR conducts structured audits of individuals, teams, and organizations to determine
+          whether people, roles, and responsibilities are aligned with real execution demands.
+        </p>
+        <p>
+          Our evaluations go beyond resumes, designations, and self-reported performance.
+          We assess actual capability depth, decision-making maturity, dependency risks,
+          and readiness for defined operating conditions.
+        </p>
+        <p>
+          VEXOR audits deliver structured findings, risk indicators, and decision inputs — not implementation mandates
+          or advisory ownership.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <div class="container">
+      <h2>Why VEXOR Exists</h2>
       <p>
-        VEXOR works with founders, CXOs, board members, and senior leadership
-        teams who require an unbiased view of workforce capability before
-        making high-impact decisions.
+        Modern organizations make critical decisions based on financial reports,
+        operational metrics, and market data — yet workforce capability is often
+        assumed rather than verified.
       </p>
       <p>
-        Typical engagement triggers include scaling challenges,
-        execution failures, leadership dependency risks, restructuring,
-        or concerns about future readiness.
+        VEXOR was established to address this gap —
+        providing leadership with an objective view of whether people, roles,
+        and structures are capable of supporting stated goals.
       </p>
       <p>
-        Organizations seeking validation, cosmetic audits, or
-        pre-decided outcomes are not a fit for VEXOR engagements.
+        Our work exists for organizations that value truth over comfort
+        and clarity over assumption.
       </p>
     </div>
-  </div>
-</section>
+  </section>
+
+  <section>
+    <div class="container">
+      <div class="card">
+        <h2>Who Engages VEXOR</h2>
+        <p>
+          VEXOR works with founders, CXOs, board members, and senior leadership
+          teams who require an unbiased view of workforce capability before
+          making high-impact decisions.
+        </p>
+        <p>
+          Typical engagement triggers include scaling challenges,
+          execution failures, leadership dependency risks, restructuring,
+          or concerns about future readiness.
+        </p>
+        <p>
+          Organizations seeking validation, cosmetic audits, or
+          pre-decided outcomes are not a fit for VEXOR engagements.
+        </p>
+      </div>
+    </div>
+  </section>
 
 
 
-<section>
-  <div class="container">
-    <h2>What We Are Not</h2>
-    <p>
-      VEXOR is not a recruitment agency, staffing vendor, training provider, or consulting firm.
-      We do not sell implementation services, coaching programs, or transformation roadmaps.
-    </p>
-    <p>
-      We do not align incentives with hiring, promotions, layoffs, or organizational restructuring.
-      Our role ends strictly at evaluation and reporting.
-    </p>
-    <p>
-      This separation is intentional. It preserves audit integrity and prevents conflicts of interest.
-    </p>
-  </div>
-</section>
-
-
-
-
-
-<section>
-  <div class="container">
-    <div class="card">
-      <h2>How We Operate</h2>
+  <section>
+    <div class="container">
+      <h2>What We Are Not</h2>
       <p>
-        Every VEXOR engagement follows a defined audit framework with clearly documented scope,
-        evaluation criteria, and evidence-backed observations.
+        VEXOR is not a recruitment agency, staffing vendor, training provider, or consulting firm.
+        We do not sell implementation services, coaching programs, or transformation roadmaps.
       </p>
       <p>
-        Engagements begin with either a written request or a paid professional discussion to assess
-        suitability, audit depth, and organizational context.
+        We do not align incentives with hiring, promotions, layoffs, or organizational restructuring.
+        Our role ends strictly at evaluation and reporting.
       </p>
       <p>
-        Commercial terms, timelines, and audit boundaries are finalized only after mutual clarity
-        is established.
+        This separation is intentional. It preserves audit integrity and prevents conflicts of interest.
       </p>
     </div>
-  </div>
-</section>
+  </section>
 
 
-<section>
-  <div class="container">
-    <h2>Independence & Ethics</h2>
-    <p>
-      VEXOR operates independently of client management decisions and does not participate
-      in internal politics, performance disputes, or employment actions.
-    </p>
-    <p>
-      Audit findings are documented objectively and delivered without dilution,
-      alignment pressure, or outcome influence.
-    </p>
-    <p>
-      We believe workforce truth, even when uncomfortable, is more valuable than
-      agreeable narratives.
-    </p>
-    <p>
-      VEXOR does not provide opinions for employment actions and does not participate
-      in disciplinary, termination, or promotion decisions.
-    </p>
-  </div>
-</section>
 
-<!-- VEXOR operates as an independent evaluation practice and does not offer consulting, advisory, or implementation services. -->
 
-<div id="footer"></div>
-<script src="assets/js/include.js"></script>
+
+  <section>
+    <div class="container">
+      <div class="card">
+        <h2>How We Operate</h2>
+        <p>
+          Every VEXOR engagement follows a defined audit framework with clearly documented scope,
+          evaluation criteria, and evidence-backed observations.
+        </p>
+        <p>
+          Engagements begin with either a written request or a paid professional discussion to assess
+          suitability, audit depth, and organizational context.
+        </p>
+        <p>
+          Commercial terms, timelines, and audit boundaries are finalized only after mutual clarity
+          is established.
+        </p>
+      </div>
+    </div>
+  </section>
+
+
+  <section>
+    <div class="container">
+      <h2>Independence & Ethics</h2>
+      <p>
+        VEXOR operates independently of client management decisions and does not participate
+        in internal politics, performance disputes, or employment actions.
+      </p>
+      <p>
+        Audit findings are documented objectively and delivered without dilution,
+        alignment pressure, or outcome influence.
+      </p>
+      <p>
+        We believe workforce truth, even when uncomfortable, is more valuable than
+        agreeable narratives.
+      </p>
+      <p>
+        VEXOR does not provide opinions for employment actions and does not participate
+        in disciplinary, termination, or promotion decisions.
+      </p>
+    </div>
+  </section>
+
+  <!-- VEXOR operates as an independent evaluation practice and does not offer consulting, advisory, or implementation services. -->
+
+  <div id="footer"></div>
+  <script src="assets/js/include.js"></script>
 
 </body>
+
 </html>
