--- a/audits.html
+++ b/audits.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Audits | VEXOR</title>
+  <title>Audit Services | Workforce, Team & Organization Audits | VEXOR</title>
+  <meta name="description"
+    content="Explore VEXOR’s independent audit services covering employee capability, team effectiveness, organizational alignment, and execution readiness." />
 
-  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600&display=swap"
+    rel="stylesheet">
 
   <style>
     :root {
@@ -98,17 +102,15 @@
       margin: 0 auto;
     }
 
-.section-divider {
-  border: none;
-  height: 1px;
-  background: linear-gradient(
-    to right,
-    transparent,
-    rgba(127, 140, 255, 0.35),
-    transparent
-  );
-  margin: 80px 0;
-}
+    .section-divider {
+      border: none;
+      height: 1px;
+      background: linear-gradient(to right,
+          transparent,
+          rgba(127, 140, 255, 0.35),
+          transparent);
+      margin: 80px 0;
+    }
 
 
     .card {
@@ -176,6 +178,7 @@
   </style>
   <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
 
   <div id="header"></div>
@@ -184,98 +187,106 @@
     <h1>Audit Engagements</h1>
     <p>
       VEXOR conducts independent capability and execution audits across individuals, teams, and organizations.
-    These audits are designed to surface risk, misalignment, and readiness gaps that are often invisible in growing systems.
+      These audits are designed to surface risk, misalignment, and readiness gaps that are often invisible in growing
+      systems.
     </p>
     <p>
-  Audits focus on observation and evaluation — not advisory, coaching, or implementation.
-</p>
+      Audits focus on observation and evaluation — not advisory, coaching, or implementation.
+    </p>
 
   </header>
 
   <section>
     <div class="container">
-    <div class="grid">
+      <div class="grid">
 
-      <div class="card">
-        <h3>Employee Audit</h3>
-        <p>
-          Individual-level capability assessment to evaluate role alignment, execution ability, and future readiness.<br><br>
-          Designed to answer a single question: <strong>Is this individual actually fit for the role they occupy?</strong>
-        </p>
-        <ul>
-          <li>Role vs skill alignment assessment</li>
-          <li>Execution capability signals</li>
-          <li>Behavioral and ownership indicators</li>
-          <li>Future readiness & risk markers</li>
-        </ul>
-        <p class="note">
-          Best for critical roles, leadership tracks, or performance ambiguity.
-        </p>
-        <a href="employee-audit.html" class="cta">Scope & Structure</a>
+        <div class="card">
+          <h3>Employee Audit</h3>
+          <p>
+            Individual-level capability assessment to evaluate role alignment, execution ability, and future
+            readiness.<br><br>
+            Designed to answer a single question: <strong>Is this individual actually fit for the role they
+              occupy?</strong>
+          </p>
+          <ul>
+            <li>Role vs skill alignment assessment</li>
+            <li>Execution capability signals</li>
+            <li>Behavioral and ownership indicators</li>
+            <li>Future readiness & risk markers</li>
+          </ul>
+          <p class="note">
+            Best for critical roles, leadership tracks, or performance ambiguity.
+          </p>
+          <a href="employee-audit.html" class="cta">Scope & Structure</a>
+        </div>
+
+        <div class="card">
+          <h3>Team Audit</h3>
+          <p>
+            Evaluation of intact teams working toward shared objectives, focusing on collaboration and output
+            effectiveness.<br><br>
+            Evaluates whether an intact team is functioning as a unit — or merely operating as
+            individuals.<br><strong>Is this team actually producing outcomes — or just activity?</strong>
+
+          </p><br>
+          <ul>
+            <li>Individual capability + team dynamics</li>
+            <li>Leadership and decision ownership</li>
+            <li>Execution flow and bottleneck mapping</li>
+            <li>Collaboration vs dependency risk</li>
+          </ul>
+          <p class="note">
+            Recommended for delivery teams, departments, or strategic initiatives.
+          </p>
+          <a href="team-audit.html" class="cta">Scope & Structure</a>
+        </div>
+
+        <div class="card">
+          <h3>Organization Audit</h3>
+          <p>
+            Organization-wide assessment covering leadership depth, structural alignment, and systemic execution
+            risk.<br><br>
+            A system-level evaluation designed to uncover structural, leadership, and execution risks across the
+            organization.<br><strong>Is the organization structurally capable of executing its strategy?</strong>
+
+          </p><br>
+          <ul>
+            <li>Leadership depth and hierarchy stress</li>
+            <li>Cross-team capability distribution</li>
+            <li>Systemic execution and accountability gaps</li>
+            <li>Strategic readiness assessment</li>
+          </ul>
+          <p class="note">
+            Organization audits require mandatory discussion prior to engagement.
+          </p>
+          <a href="organization-audit.html" class="cta">Eligibility & Scope</a>
+        </div>
+
       </div>
-
-      <div class="card">
-        <h3>Team Audit</h3>
-        <p>
-          Evaluation of intact teams working toward shared objectives, focusing on collaboration and output effectiveness.<br><br>
-          Evaluates whether an intact team is functioning as a unit — or merely operating as individuals.<br><strong>Is this team actually producing outcomes — or just activity?</strong>
-
-        </p><br>
-        <ul>
-          <li>Individual capability + team dynamics</li>
-          <li>Leadership and decision ownership</li>
-          <li>Execution flow and bottleneck mapping</li>
-          <li>Collaboration vs dependency risk</li>
-        </ul>
-        <p class="note">
-          Recommended for delivery teams, departments, or strategic initiatives.
-        </p>
-        <a href="team-audit.html" class="cta">Scope & Structure</a>
-      </div>
-
-      <div class="card">
-        <h3>Organization Audit</h3>
-        <p>
-          Organization-wide assessment covering leadership depth, structural alignment, and systemic execution risk.<br><br>
-          A system-level evaluation designed to uncover structural, leadership, and execution risks across the organization.<br><strong>Is the organization structurally capable of executing its strategy?</strong>
-
-        </p><br>
-        <ul>
-          <li>Leadership depth and hierarchy stress</li>
-          <li>Cross-team capability distribution</li>
-          <li>Systemic execution and accountability gaps</li>
-          <li>Strategic readiness assessment</li>
-        </ul>
-        <p class="note">
-          Organization audits require mandatory discussion prior to engagement.
-        </p>
-        <a href="organization-audit.html" class="cta">Eligibility & Scope</a>
-      </div>
-
-    </div>
     </div>
   </section>
-<hr class="section-divider">
+  <hr class="section-divider">
 
   <section>
     <div class="container">
-    <h2>How Engagements Typically Begin</h2>
-    <ul>
-      <li>Initial context review</li>
-      <li>Professional evaluation discussion (mandatory for organization audits)</li>
-      <li>Scope confirmation and audit planning</li>
-      <li>On-site or structured remote execution</li>
-    </ul><br>
-    <p class="note">
-  Engagements begin only after alignment on scope, intent, and audit boundaries.
-</p>
+      <h2>How Engagements Typically Begin</h2>
+      <ul>
+        <li>Initial context review</li>
+        <li>Professional evaluation discussion (mandatory for organization audits)</li>
+        <li>Scope confirmation and audit planning</li>
+        <li>On-site or structured remote execution</li>
+      </ul><br>
+      <p class="note">
+        Engagements begin only after alignment on scope, intent, and audit boundaries.
+      </p>
 
 
-    <a href="request-discussion.html" class="cta">Request a Professional Discussion</a>
+      <a href="request-discussion.html" class="cta">Request a Professional Discussion</a>
     </div>
   </section>
 
   <div id="footer"></div>
-<script src="assets/js/include.js"></script>
+  <script src="assets/js/include.js"></script>
 </body>
+
 </html>
