--- a/employee-audit.html
+++ b/employee-audit.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Employee Audit | VEXOR</title>
+  <title>Employee Capability Audit | Independent Workforce Evaluation | VEXOR</title>
+  <meta name="description"
+    content="VEXOR’s Employee Audit evaluates role fit, capability alignment, execution readiness, and performance risk without prescriptive consulting." />
 
-  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600&display=swap"
+    rel="stylesheet">
 
   <style>
     :root {
@@ -106,10 +110,10 @@
     }
 
     .container {
-  max-width: 1100px;
-  margin: 0 auto;
-  padding: 0 24px;
-}
+      max-width: 1100px;
+      margin: 0 auto;
+      padding: 0 24px;
+    }
 
     .card {
       background: var(--bg-card);
@@ -185,7 +189,9 @@
       }
     }
   </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
 
   <!-- GLOBAL NAV -->
@@ -194,58 +200,60 @@
   <!-- PAGE HEADER -->
   <header>
     <h1>Employee Audit</h1>
-    <p>A structured, independent evaluation to determine whether an employee genuinely fits their role — not by title or tenure, but by real capability, judgment, and future readiness.</p>
+    <p>A structured, independent evaluation to determine whether an employee genuinely fits their role — not by title or
+      tenure, but by real capability, judgment, and future readiness.</p>
   </header>
 
   <section>
     <h2>Why Organizations Use Employee Audits</h2>
-<p>
-    Organizations often operate with assumed competence. Over time, these assumptions become expensive.
-  </p>
-  <p>
-    The Employee Audit exists to replace assumptions with evidence — helping leadership make informed decisions about performance, growth, and risk.
-  </p>
+    <p>
+      Organizations often operate with assumed competence. Over time, these assumptions become expensive.
+    </p>
+    <p>
+      The Employee Audit exists to replace assumptions with evidence — helping leadership make informed decisions about
+      performance, growth, and risk.
+    </p>
   </section>
 
   <section>
     <div class="container">
       <div class="card">
-    <h2>This Audit Helps Answer</h2>
-    <ul>
-      <li>Is this employee truly operating at the level the role requires?</li>
-    <li>Are capability gaps being masked by experience, tenure, or perception?</li>
-    <li>Is the employee equipped for upcoming organizational challenges?</li>
-    <li>Does their mindset align with leadership expectations and company direction?</li>
-    </ul>
+        <h2>This Audit Helps Answer</h2>
+        <ul>
+          <li>Is this employee truly operating at the level the role requires?</li>
+          <li>Are capability gaps being masked by experience, tenure, or perception?</li>
+          <li>Is the employee equipped for upcoming organizational challenges?</li>
+          <li>Does their mindset align with leadership expectations and company direction?</li>
+        </ul>
       </div>
     </div>
   </section>
 
   <section>
-  <h2>Who This Is Typically For</h2>
-  <ul>
-    <li>Employees in critical or decision-impacting roles</li>
-    <li>High-cost or high-risk positions</li>
-    <li>Employees under consideration for promotion or role expansion</li>
-    <li>Roles where performance concerns are unclear or disputed</li>
-  </ul>
+    <h2>Who This Is Typically For</h2>
+    <ul>
+      <li>Employees in critical or decision-impacting roles</li>
+      <li>High-cost or high-risk positions</li>
+      <li>Employees under consideration for promotion or role expansion</li>
+      <li>Roles where performance concerns are unclear or disputed</li>
+    </ul>
   </section>
 
   <section>
     <div class="container">
       <div class="card">
-    <h2>Evaluation Dimensions</h2>
-    <ul>
-      <li>Role-specific technical competence</li>
-    <li>Domain and contextual understanding</li>
-    <li>Problem-solving and decision judgment</li>
-    <li>Ownership and accountability</li>
-    <li>Learning agility and adaptability</li>
-    <li>Communication clarity</li>
-    <li>Professional confidence under scrutiny</li>
-    <li>Ethical judgment and reliability</li>
-    <li>Alignment with organizational priorities</li>
-    </ul>
+        <h2>Evaluation Dimensions</h2>
+        <ul>
+          <li>Role-specific technical competence</li>
+          <li>Domain and contextual understanding</li>
+          <li>Problem-solving and decision judgment</li>
+          <li>Ownership and accountability</li>
+          <li>Learning agility and adaptability</li>
+          <li>Communication clarity</li>
+          <li>Professional confidence under scrutiny</li>
+          <li>Ethical judgment and reliability</li>
+          <li>Alignment with organizational priorities</li>
+        </ul>
       </div>
     </div>
   </section>
@@ -299,13 +307,13 @@
   <section>
     <div class="container">
       <div class="card">
-    <h2>Audit Methodology</h2>
-    <ul>
-      <li>Role and context analysis before interaction</li>
-    <li>Scenario-driven evaluation aligned to role complexity</li>
-    <li>Structured one-on-one audit interaction</li>
-    <li>Independent scoring across predefined dimensions</li>
-    </ul>
+        <h2>Audit Methodology</h2>
+        <ul>
+          <li>Role and context analysis before interaction</li>
+          <li>Scenario-driven evaluation aligned to role complexity</li>
+          <li>Structured one-on-one audit interaction</li>
+          <li>Independent scoring across predefined dimensions</li>
+        </ul>
       </div>
     </div>
   </section>
@@ -314,10 +322,10 @@
     <h2>Deliverables</h2>
     <ul>
       <li>Role-fit assessment summary</li>
-    <li>Capability gap indicators (if any)</li>
-    <li>Risk exposure notes (short / medium term)</li>
-    <li>Readiness assessment for expanded responsibility</li>
-    <li>Executive-level audit summary (non-operational)</li>
+      <li>Capability gap indicators (if any)</li>
+      <li>Risk exposure notes (short / medium term)</li>
+      <li>Readiness assessment for expanded responsibility</li>
+      <li>Executive-level audit summary (non-operational)</li>
     </ul>
     <p>Audit findings remain valid for <strong>6 months</strong>.</p>
   </section>
@@ -341,30 +349,30 @@
   <section>
     <div class="container">
       <div class="card">
-    <h2>Engagement & Conduct Guidelines</h2>
-    <ul>
-      <li>Travel, accommodation, food, and local transport for on-site audits are borne by the client.</li>
-    <li>Auditors do not disclose personal details due to firm policy.</li>
-    <li>Participants are expected to cooperate honestly and professionally.</li>
-    <li>Audit outcomes may influence appraisal, role change, transfer, or separation decisions.</li>
-    </ul>
+        <h2>Engagement & Conduct Guidelines</h2>
+        <ul>
+          <li>Travel, accommodation, food, and local transport for on-site audits are borne by the client.</li>
+          <li>Auditors do not disclose personal details due to firm policy.</li>
+          <li>Participants are expected to cooperate honestly and professionally.</li>
+          <li>Audit outcomes may influence appraisal, role change, transfer, or separation decisions.</li>
+        </ul>
 
-    <section>
-      <p class="note">
-        Detailed scoring logic, weightage models, and evaluator calibration
-        documentation are maintained internally as audit appendices and
-        are not distributed as part of standard client deliverables.
-      </p>
-    </section>
+        <section>
+          <p class="note">
+            Detailed scoring logic, weightage models, and evaluator calibration
+            documentation are maintained internally as audit appendices and
+            are not distributed as part of standard client deliverables.
+          </p>
+        </section>
 
 
-    <a href="request-discussion.html" class="cta">Request a Professional Evaluation Discussion</a>
+        <a href="request-discussion.html" class="cta">Request a Professional Evaluation Discussion</a>
       </div>
     </div>
   </section>
 
   <div id="footer"></div>
-<script src="assets/js/include.js"></script>
+  <script src="assets/js/include.js"></script>
 </body>
-</html>
 
+</html>
