--- a/faq.html
+++ b/faq.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Frequently Asked Questions | VEXOR</title>
+  <meta name="description"
+    content="Answers to common questions about VEXOR’s independent workforce, team, and organizational audit process." />
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   <style>
@@ -29,112 +32,121 @@
     }
   </style>
 </head>
+
 <body>
 
-<div id="header"></div>
+  <div id="header"></div>
 
-<section style="padding:60px 6%; max-width:1000px;">
-  <h1>Frequently Asked Questions</h1><br>
+  <section style="padding:60px 6%; max-width:1000px;">
+    <h1>Frequently Asked Questions</h1><br>
 
-  <!-- Engagement Basics -->
-  <h2>Engagement Basics</h2>
+    <!-- Engagement Basics -->
+    <h2>Engagement Basics</h2>
 
-  <p><strong>What does VEXOR actually do?</strong><br>
-    VEXOR conducts independent audits of employees, teams, and organizations to evaluate capability alignment, execution readiness, and workforce risk indicators. Our role is evaluative, not advisory or operational.
-  </p>
+    <p><strong>What does VEXOR actually do?</strong><br>
+      VEXOR conducts independent audits of employees, teams, and organizations to evaluate capability alignment,
+      execution readiness, and workforce risk indicators. Our role is evaluative, not advisory or operational.
+    </p>
 
-  <p><strong>Is VEXOR a consulting or recruitment firm?</strong><br>
-    No. VEXOR does not provide consulting, recruitment, coaching, outsourcing, or implementation services. We focus exclusively on objective evaluation.
-  </p>
+    <p><strong>Is VEXOR a consulting or recruitment firm?</strong><br>
+      No. VEXOR does not provide consulting, recruitment, coaching, outsourcing, or implementation services. We focus
+      exclusively on objective evaluation.
+    </p>
 
-  <p><strong>Who typically engages VEXOR?</strong><br>
-    Founders, CXOs, boards, and senior leadership teams seeking factual clarity before making people, structure, or strategy decisions.
-  </p><br>
+    <p><strong>Who typically engages VEXOR?</strong><br>
+      Founders, CXOs, boards, and senior leadership teams seeking factual clarity before making people, structure, or
+      strategy decisions.
+    </p><br>
 
-  <!-- Audit Scope & Process -->
-  <h2>Audit Scope & Process</h2>
+    <!-- Audit Scope & Process -->
+    <h2>Audit Scope & Process</h2>
 
-  <p><strong>How does an audit engagement begin?</strong><br>
-    Engagements begin with a professional discussion to assess suitability, scope, and expectations. Some discussions are paid; limited written clarification may be provided without charge.
-  </p>
+    <p><strong>How does an audit engagement begin?</strong><br>
+      Engagements begin with a professional discussion to assess suitability, scope, and expectations. Some discussions
+      are paid; limited written clarification may be provided without charge.
+    </p>
 
-  <p><strong>What does the audit process involve?</strong><br>
-    Audits may include structured interviews, role-based assessments, observation of decision-making and execution behaviors, documentation review, and contextual analysis. The exact approach depends on scope and context.
-  </p>
+    <p><strong>What does the audit process involve?</strong><br>
+      Audits may include structured interviews, role-based assessments, observation of decision-making and execution
+      behaviors, documentation review, and contextual analysis. The exact approach depends on scope and context.
+    </p>
 
-  <p><strong>Do you audit individuals or entire organizations?</strong><br>
-    Both. VEXOR conducts individual employee audits, team-level audits, and organization-wide workforce evaluations.
-  </p><br>
+    <p><strong>Do you audit individuals or entire organizations?</strong><br>
+      Both. VEXOR conducts individual employee audits, team-level audits, and organization-wide workforce evaluations.
+    </p><br>
 
-  <!-- Reporting & Outcomes -->
-  <h2>Reporting & Outcomes</h2>
+    <!-- Reporting & Outcomes -->
+    <h2>Reporting & Outcomes</h2>
 
-  <p><strong>What do clients receive after an audit?</strong><br>
-    Clients receive a structured report outlining observations, risk indicators, capability alignment, and execution concerns relevant to the defined scope.
-  </p>
+    <p><strong>What do clients receive after an audit?</strong><br>
+      Clients receive a structured report outlining observations, risk indicators, capability alignment, and execution
+      concerns relevant to the defined scope.
+    </p>
 
-  <p><strong>Does VEXOR provide recommendations?</strong><br>
-Reports include documented observations and contextual considerations.
-VEXOR does not prescribe actions, recommend specific decisions,
-or participate in implementation or execution.
-  </p>
+    <p><strong>Does VEXOR provide recommendations?</strong><br>
+      Reports include documented observations and contextual considerations.
+      VEXOR does not prescribe actions, recommend specific decisions,
+      or participate in implementation or execution.
+    </p>
 
-  <p><strong>Can audit findings affect employee outcomes?</strong><br>
-Audit findings may inform leadership decisions related to role changes,
-restructuring, or performance actions. Responsibility for interpretation,
-decision-making, communication, and outcomes rests solely with the client.
-VEXOR does not participate in or influence execution of such decisions.
-  </p><br>
+    <p><strong>Can audit findings affect employee outcomes?</strong><br>
+      Audit findings may inform leadership decisions related to role changes,
+      restructuring, or performance actions. Responsibility for interpretation,
+      decision-making, communication, and outcomes rests solely with the client.
+      VEXOR does not participate in or influence execution of such decisions.
+    </p><br>
 
-  <!-- Commercial & Practical -->
-  <h2>Commercial & Practical Questions</h2>
+    <!-- Commercial & Practical -->
+    <h2>Commercial & Practical Questions</h2>
 
-  <p><strong>Are discussions paid?</strong><br>
-    Some professional discussions are paid and non-refundable. This is communicated in advance.
-  </p>
+    <p><strong>Are discussions paid?</strong><br>
+      Some professional discussions are paid and non-refundable. This is communicated in advance.
+    </p>
 
-  <p><strong>How is pricing determined?</strong><br>
-    Pricing depends on audit scope, depth, number of participants, location, and customization requirements.
-  </p>
+    <p><strong>How is pricing determined?</strong><br>
+      Pricing depends on audit scope, depth, number of participants, location, and customization requirements.
+    </p>
 
-  <p><strong>Do you conduct remote audits?</strong><br>
-    Yes. Audits may be conducted virtually, on-site, or in hybrid formats depending on engagement needs.
-  </p><br>
+    <p><strong>Do you conduct remote audits?</strong><br>
+      Yes. Audits may be conducted virtually, on-site, or in hybrid formats depending on engagement needs.
+    </p><br>
 
-  <!-- Boundaries & Limitations -->
-  <h2>Boundaries & Limitations</h2>
+    <!-- Boundaries & Limitations -->
+    <h2>Boundaries & Limitations</h2>
 
-  <p><strong>Does VEXOR guarantee outcomes?</strong><br>
-    No. Audits provide an assessment at a point in time. Business outcomes depend on client decisions and subsequent actions.
-  </p>
+    <p><strong>Does VEXOR guarantee outcomes?</strong><br>
+      No. Audits provide an assessment at a point in time. Business outcomes depend on client decisions and subsequent
+      actions.
+    </p>
 
-  <p><strong>Is audit data confidential?</strong><br>
-Yes. All engagement data is treated as confidential and used solely
-for the purpose of the audit, in accordance with defined scope
-and designated decision authority.
-  </p>
+    <p><strong>Is audit data confidential?</strong><br>
+      Yes. All engagement data is treated as confidential and used solely
+      for the purpose of the audit, in accordance with defined scope
+      and designated decision authority.
+    </p>
 
-  <p><strong>Can reports be shared publicly?</strong><br>
-    No. Audit reports may not be shared externally without prior written consent from VEXOR.
-  </p>
+    <p><strong>Can reports be shared publicly?</strong><br>
+      No. Audit reports may not be shared externally without prior written consent from VEXOR.
+    </p>
 
-  <h2>What VEXOR Will Not Answer</h2>
+    <h2>What VEXOR Will Not Answer</h2>
 
-<p><strong>Will VEXOR tell us who to hire, fire, promote, or replace?</strong><br>
-  No. VEXOR does not make personnel decisions or provide directives.
-  Our role ends at presenting observed risks and patterns.
-</p>
+    <p><strong>Will VEXOR tell us who to hire, fire, promote, or replace?</strong><br>
+      No. VEXOR does not make personnel decisions or provide directives.
+      Our role ends at presenting observed risks and patterns.
+    </p>
 
-<p><strong>Will VEXOR justify management decisions?</strong><br>
-  No. Audit outputs are not endorsements and may not be used
-  to retroactively justify decisions.
-</p>
+    <p><strong>Will VEXOR justify management decisions?</strong><br>
+      No. Audit outputs are not endorsements and may not be used
+      to retroactively justify decisions.
+    </p>
 
 
-</section>
+  </section>
 
-<div id="footer"></div>
-<script src="assets/js/include.js"></script>
+  <div id="footer"></div>
+  <script src="assets/js/include.js"></script>
 
 </body>
+
 </html>
