--- a/index.html
+++ b/index.html
@@ -3,279 +3,277 @@
 <!DOCTYPE html>
 
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>VEXOR | Independent Workforce & Capability Audits</title>
-  <meta name="description" content="VEXOR is an independent audit firm conducting employee, team, and organizational evaluations to assess workforce capability, role alignment, and execution risk." />
+  <title>VEXOR | Independent Workforce, Capability & Execution Audits</title>
+  <meta name="description"
+    content="VEXOR is an independent audit firm conducting employee, team, and organizational evaluations to assess workforce capability, role alignment, and execution readiness." />
   <link rel="stylesheet" href="styles.css" />
   <style>
-    
-    
     .section-divider {
-  border: none;
-  height: 1px;
-  background: linear-gradient(
-    to right,
-    transparent,
-    rgba(127, 140, 255, 0.35),
-    transparent
-  );
-  margin: 80px 0;
-}
+      border: none;
+      height: 1px;
+      background: linear-gradient(to right,
+          transparent,
+          rgba(127, 140, 255, 0.35),
+          transparent);
+      margin: 80px 0;
+    }
 
 
-.metric-card {
-  background: var(--bg-card);
-  border: 1px solid var(--border);
-  border-radius: 14px;
-  padding: 20px 22px;
-  display: flex;
-  flex-direction: column;
-  gap: 6px;
-}
+    .metric-card {
+      background: var(--bg-card);
+      border: 1px solid var(--border);
+      border-radius: 14px;
+      padding: 20px 22px;
+      display: flex;
+      flex-direction: column;
+      gap: 6px;
+    }
 
-.metric-card strong {
-  font-size: 15px;
-  font-weight: 500;
-  color: var(--text-main);
-}
+    .metric-card strong {
+      font-size: 15px;
+      font-weight: 500;
+      color: var(--text-main);
+    }
 
-.metric-card span {
-  font-size: 13px;
-  color: var(--text-muted);
-}
-
-
-
+    .metric-card span {
+      font-size: 13px;
+      color: var(--text-muted);
+    }
   </style>
 </head>
+
 <body>
 
-<!-- Header -->
-<div id="header"></div>
+  <!-- Header -->
+  <div id="header"></div>
 
+  <!-- Hero Section -->
 
-<!-- Hero Section -->
+  <section class="hero">
+    <div class="container hero-grid">
+      <div class="hero-text">
+        <h1>Workforce Risk Exists.<br>We Measure It.</h1>
+        <p class="hero-subtitle">
+          VEXOR is an independent workforce audit firm evaluating whether employees, teams,
+          and organizations are aligned with defined roles, responsibilities, and operational expectations.
+        </p>
+        <p>
+          Independent evaluations focused on execution risk, role misalignment, and workforce readiness — before these
+          issues surface as material operational concerns.
+        </p>
 
-<section class="hero">
-  <div class="container hero-grid">
-    <div class="hero-text">
-      <h1>Workforce Risk Exists.<br>We Measure It.</h1>
-      <p class="hero-subtitle">
-        VEXOR is an independent workforce audit firm evaluating whether employees, teams,
-        and organizations are aligned with defined roles, responsibilities, and operational expectations.
+        <div class="hero-actions">
+          <a href="audits.html" class="btn primary">Explore Audits</a>
+          <a href="request-discussion.html" class="btn secondary">Request Professional Discussion</a>
+        </div>
+      </div>
+      <div class="hero-visual">
+        <div class="metric-card">
+          <strong>Role–Skill Gaps</strong>
+          <span>Unverified capability mismatches</span>
+        </div>
+
+        <div class="metric-card">
+          <strong>Execution Readiness</strong>
+          <span>Ability to deliver under real conditions</span>
+        </div>
+
+        <div class="metric-card">
+          <strong>People Risk Signals</strong>
+          <span>Hidden dependency and execution exposure</span>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Problem Statement -->
+
+  <section class="problem">
+    <div class="container narrow">
+      <h2>The Most Audited Asset Is Often the Least Verified</h2>
+      <p>
+        Organizations routinely audit finance, security, compliance, and quality.
+        Yet the human workforce — the single biggest determinant of execution success —
+        often remains unevaluated beyond resumes and annual appraisals.
       </p>
       <p>
-        Independent evaluations focused on execution risk, role misalignment, and workforce readiness — before these issues surface as material operational concerns.
+        As organizations scale, decision-makers lose visibility into real capability levels.
+        Delegation increases. Skill gaps compound silently. Strategic execution risk rises.
+      </p>
+    </div>
+  </section>
+
+  <!-- What We Do -->
+
+  <section class="what-we-do">
+    <div class="container">
+      <h2>What VEXOR Audits</h2>
+      <div class="audit-cards">
+        <div class="audit-card">
+          <h3>Employees</h3>
+          <p>
+            Individual capability audits assessing role alignment, technical depth,
+            behavioral maturity, and future readiness.
+          </p>
+          <a href="employee-audit.html">Audit scope →</a>
+        </div>
+        <div class="audit-card">
+          <h3>Teams</h3>
+          <p>
+            Team-level audits identifying collaboration gaps, leadership dependency,
+            execution friction, and delivery risk.
+          </p>
+          <a href="team-audit.html">Audit scope →</a>
+        </div>
+        <div class="audit-card">
+          <h3>Organizations</h3>
+          <p>
+            Enterprise-wide audits evaluating workforce structure, role clarity,
+            succession readiness, and execution resilience.
+          </p>
+          <a href="organization-audit.html">Audit scope →</a>
+        </div>
+      </div>
+    </div>
+  </section>
+  <hr class="section-divider">
+
+
+  <section class="audience">
+    <div class="container narrow">
+      <h2>Who This Is For</h2>
+
+      <p>
+        VEXOR works with decision-makers who require objective clarity before making
+        people, structure, or leadership decisions.
       </p>
 
-      <div class="hero-actions">
-        <a href="audits.html" class="btn primary">Explore Audits</a>
-        <a href="request-discussion.html" class="btn secondary">Request Professional Discussion</a>
+      <ul class="value-points">
+        <li>Founders and senior leadership</li>
+        <li>HR and talent heads responsible for outcomes</li>
+        <li>Institutions and organizations facing scale or transition</li>
+      </ul>
+
+      <h3 style="margin-top:32px;">Who This Is Not For</h3>
+
+      <ul class="value-points">
+        <li>Resume screening or hiring shortcuts</li>
+        <li>Coaching, training, or performance improvement programs</li>
+        <li>Quick advice or informal consultations</li>
+      </ul>
+    </div>
+  </section>
+  <hr class="section-divider">
+
+
+  <section class="positioning">
+    <div class="container narrow">
+      <h2>What VEXOR Is Not</h2>
+      <ul class="value-points">
+        <li>Not a hiring platform or assessment tool</li>
+        <li>Not a training or coaching provider</li>
+        <li>Not advisory or consulting disguised as audits</li>
+        <li>Not outcome guarantees or performance promises</li>
+      </ul>
+    </div>
+  </section>
+
+
+
+  <!-- Value Explanation -->
+
+  <section class="value">
+    <div class="container narrow">
+      <h2>Why Workforce Auditing Matters</h2>
+      <ul class="value-points">
+        <li>Unverified capability leads to delayed execution and hidden losses</li>
+        <li>Misaligned roles reduce ROI on payroll and hiring</li>
+        <li>Skill stagnation increases dependency on a few individuals</li>
+        <li>Leadership decisions are weakened without objective people data</li>
+      </ul>
+      <p class="value-note">
+        VEXOR audits are not opinions. They are structured evaluations designed to
+        inform critical people and strategy decisions.
+      </p>
+    </div>
+  </section>
+
+  <section class="economic-risk">
+    <div class="container narrow">
+      <h2>The Hidden Cost of Capability Mismatch</h2>
+
+      <p>
+        Workforce risk rarely appears as a single failure. It accumulates quietly through
+        delayed execution, rework, missed decisions, and dependency on a few individuals.
+      </p>
+
+      <p>
+        Consider a simplified illustration:
+      </p>
+
+      <ul class="value-points">
+        <li>An employee with a monthly cost of ₹1,50,000 (salary, benefits, overhead)</li>
+        <li>Operating at 60–70% effective role alignment</li>
+        <li>Creates an estimated inefficiency cost of ₹45,000–₹60,000 per month</li>
+      </ul>
+
+      <p class="value-note">
+        This is not a claim of loss, but a conservative illustration of how misalignment,
+        skill gaps, and unclear accountability translate into economic drag over time.
+      </p>
+
+      <p class="value-note">
+        At scale, these risks compound across teams and leadership layers — often remaining
+        invisible until outcomes are already affected.
+      </p>
+    </div>
+  </section>
+
+  <hr class="section-divider">
+
+
+
+  <!-- Engagement Model -->
+
+  <section class="engagement">
+    <div class="container">
+      <h2>How Engagement Works</h2>
+      <div class="steps">
+        <div class="step">1. Submit a written request or request a paid professional discussion</div>
+        <div class="step">2. Request review and engagement suitability assessment</div>
+        <div class="step">3. Scope definition, feasibility, and commercial alignment</div>
+        <div class="step">4. Structured audit execution and findings delivery</div>
       </div>
     </div>
-    <div class="hero-visual">
-      <div class="metric-card">
-    <strong>Role–Skill Gaps</strong>
-    <span>Unverified capability mismatches</span>
-  </div>
+  </section>
 
-  <div class="metric-card">
-    <strong>Execution Readiness</strong>
-    <span>Ability to deliver under real conditions</span>
-  </div>
+  <!-- CTA -->
 
-  <div class="metric-card">
-    <strong>People Risk Signals</strong>
-    <span>Hidden dependency and execution exposure</span>
-  </div>
+  <section class="final-cta">
+    <div class="container narrow">
+      <h2>Serious Evaluations Start With Serious Conversations</h2>
+      <p>
+        VEXOR engages only where objective workforce evaluation is valued
+        and outcomes are taken seriously.
+      </p>
+      <a href="request-discussion.html" class="btn primary large">Request Professional Discussion</a>
+      <p style="font-size:13px; color:var(--text-muted); margin-top:12px;">
+        Written requests are reviewed without obligation. Live professional discussions are paid, limited, and subject
+        to suitability.
+      </p>
     </div>
-  </div>
-</section>
+  </section>
+  <!-- VEXOR provides independent evaluations only and does not offer advisory, consulting, or employment decision services. -->
 
-<!-- Problem Statement -->
+  <!-- Footer -->
 
-<section class="problem">
-  <div class="container narrow">
-    <h2>The Most Audited Asset Is Often the Least Verified</h2>
-    <p>
-      Organizations routinely audit finance, security, compliance, and quality.
-      Yet the human workforce — the single biggest determinant of execution success —
-      often remains unevaluated beyond resumes and annual appraisals.
-    </p>
-    <p>
-      As organizations scale, decision-makers lose visibility into real capability levels.
-      Delegation increases. Skill gaps compound silently. Strategic execution risk rises.
-    </p>
-  </div>
-</section>
-
-<!-- What We Do -->
-
-<section class="what-we-do">
-  <div class="container">
-    <h2>What VEXOR Audits</h2>
-    <div class="audit-cards">
-      <div class="audit-card">
-        <h3>Employees</h3>
-        <p>
-          Individual capability audits assessing role alignment, technical depth,
-          behavioral maturity, and future readiness.
-        </p>
-        <a href="employee-audit.html">Audit scope →</a>
-      </div>
-      <div class="audit-card">
-        <h3>Teams</h3>
-        <p>
-          Team-level audits identifying collaboration gaps, leadership dependency,
-          execution friction, and delivery risk.
-        </p>
-        <a href="team-audit.html">Audit scope →</a>
-      </div>
-      <div class="audit-card">
-        <h3>Organizations</h3>
-        <p>
-          Enterprise-wide audits evaluating workforce structure, role clarity,
-          succession readiness, and execution resilience.
-        </p>
-        <a href="organization-audit.html">Audit scope →</a>
-      </div>
-    </div>
-  </div>
-</section>
-<hr class="section-divider">
-
-
-<section class="audience">
-  <div class="container narrow">
-    <h2>Who This Is For</h2>
-
-    <p>
-      VEXOR works with decision-makers who require objective clarity before making
-      people, structure, or leadership decisions.
-    </p>
-
-    <ul class="value-points">
-      <li>Founders and senior leadership</li>
-      <li>HR and talent heads responsible for outcomes</li>
-      <li>Institutions and organizations facing scale or transition</li>
-    </ul>
-
-    <h3 style="margin-top:32px;">Who This Is Not For</h3>
-
-    <ul class="value-points">
-      <li>Resume screening or hiring shortcuts</li>
-      <li>Coaching, training, or performance improvement programs</li>
-      <li>Quick advice or informal consultations</li>
-    </ul>
-  </div>
-</section>
-<hr class="section-divider">
-
-
-<section class="positioning">
-  <div class="container narrow">
-    <h2>What VEXOR Is Not</h2>
-    <ul class="value-points">
-      <li>Not a hiring platform or assessment tool</li>
-      <li>Not a training or coaching provider</li>
-      <li>Not advisory or consulting disguised as audits</li>
-      <li>Not outcome guarantees or performance promises</li>
-    </ul>
-  </div>
-</section>
-
-
-
-<!-- Value Explanation -->
-
-<section class="value">
-  <div class="container narrow">
-    <h2>Why Workforce Auditing Matters</h2>
-    <ul class="value-points">
-      <li>Unverified capability leads to delayed execution and hidden losses</li>
-      <li>Misaligned roles reduce ROI on payroll and hiring</li>
-      <li>Skill stagnation increases dependency on a few individuals</li>
-      <li>Leadership decisions are weakened without objective people data</li>
-    </ul>
-    <p class="value-note">
-      VEXOR audits are not opinions. They are structured evaluations designed to
-      inform critical people and strategy decisions.
-    </p>
-  </div>
-</section>
-
-<section class="economic-risk">
-  <div class="container narrow">
-    <h2>The Hidden Cost of Capability Mismatch</h2>
-
-    <p>
-      Workforce risk rarely appears as a single failure. It accumulates quietly through
-      delayed execution, rework, missed decisions, and dependency on a few individuals.
-    </p>
-
-    <p>
-      Consider a simplified illustration:
-    </p>
-
-    <ul class="value-points">
-      <li>An employee with a monthly cost of ₹1,50,000 (salary, benefits, overhead)</li>
-      <li>Operating at 60–70% effective role alignment</li>
-      <li>Creates an estimated inefficiency cost of ₹45,000–₹60,000 per month</li>
-    </ul>
-
-    <p class="value-note">
-      This is not a claim of loss, but a conservative illustration of how misalignment,
-      skill gaps, and unclear accountability translate into economic drag over time.
-    </p>
-
-    <p class="value-note">
-      At scale, these risks compound across teams and leadership layers — often remaining
-      invisible until outcomes are already affected.
-    </p>
-  </div>
-</section>
-
-<hr class="section-divider">
-
-
-
-<!-- Engagement Model -->
-
-<section class="engagement">
-  <div class="container">
-    <h2>How Engagement Works</h2>
-    <div class="steps">
-      <div class="step">1. Submit a written request or request a paid professional discussion</div>
-      <div class="step">2. Request review and engagement suitability assessment</div>
-      <div class="step">3. Scope definition, feasibility, and commercial alignment</div>
-      <div class="step">4. Structured audit execution and findings delivery</div>
-    </div>
-  </div>
-</section>
-
-<!-- CTA -->
-
-<section class="final-cta">
-  <div class="container narrow">
-    <h2>Serious Evaluations Start With Serious Conversations</h2>
-    <p>
-      VEXOR engages only where objective workforce evaluation is valued
-      and outcomes are taken seriously.
-    </p>
-    <a href="request-discussion.html" class="btn primary large">Request Professional Discussion</a>
-    <p style="font-size:13px; color:var(--text-muted); margin-top:12px;">
-      Written requests are reviewed without obligation. Live professional discussions are paid, limited, and subject to suitability.
-    </p>
-  </div>
-</section>
-<!-- VEXOR provides independent evaluations only and does not offer advisory, consulting, or employment decision services. -->
-
-<!-- Footer -->
-
-<div id="footer"></div>
-<script src="assets/js/include.js"></script>
+  <div id="footer"></div>
+  <script src="assets/js/include.js"></script>
 
 </body>
+
 </html>
