--- a/legal-guidelines.html
+++ b/legal-guidelines.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Legal & Engagement Guidelines | VEXOR</title>
 
-  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600&display=swap"
+    rel="stylesheet">
 
   <style>
     :root {
@@ -99,10 +101,10 @@
     }
 
     .container {
-  max-width: 1100px;
-  margin: 0 auto;
-  padding: 0 24px;
-}
+      max-width: 1100px;
+      margin: 0 auto;
+      padding: 0 24px;
+    }
 
     .card {
       background: var(--bg-card);
@@ -141,7 +143,9 @@
       color: var(--text-main);
     }
   </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
 
   <div id="header"></div>
@@ -149,34 +153,35 @@
   <header>
     <h1>Legal & Engagement Guidelines</h1>
     <p>
-      These guidelines define the professional, ethical, and operational framework under which VEXOR engagements are conducted.
+      These guidelines define the professional, ethical, and operational framework under which VEXOR engagements are
+      conducted.
     </p>
   </header>
 
   <section>
     <div class="container">
       <div class="card">
-    <h2>Nature of Services</h2>
-    <p>
-      VEXOR provides independent capability, workforce, and organizational audits.
-    </p>
-    <p>
-  Findings, observations, risk indicators, and decision inputs are based on structured assessments
-  and professional judgment at the time of audit.
-</p>
+        <h2>Nature of Services</h2>
+        <p>
+          VEXOR provides independent capability, workforce, and organizational audits.
+        </p>
+        <p>
+          Findings, observations, risk indicators, and decision inputs are based on structured assessments
+          and professional judgment at the time of audit.
+        </p>
 
-    <p>
-        VEXOR does not provide statutory, regulatory, or compliance certifications.
-    </p>
-    <p>
-  VEXOR does not participate in implementation, change management,
-  or execution of decisions arising from audit outcomes.
-</p>
-<p>
-  All findings are descriptive and analytical in nature.
-  They do not constitute performance ratings, psychological evaluations,
-  disciplinary judgments, or certifications of suitability for any role.
-</p>
+        <p>
+          VEXOR does not provide statutory, regulatory, or compliance certifications.
+        </p>
+        <p>
+          VEXOR does not participate in implementation, change management,
+          or execution of decisions arising from audit outcomes.
+        </p>
+        <p>
+          All findings are descriptive and analytical in nature.
+          They do not constitute performance ratings, psychological evaluations,
+          disciplinary judgments, or certifications of suitability for any role.
+        </p>
 
       </div>
     </div>
@@ -191,9 +196,9 @@
       <li>Audit data is used solely for the purpose of the engagement.</li>
       <li>VEXOR does not sell, trade, or misuse client data.</li>
       <li>
-  Digital records are stored using reasonable security practices and
-  retained only for the duration necessary to complete the engagement.
-</li>
+        Digital records are stored using reasonable security practices and
+        retained only for the duration necessary to complete the engagement.
+      </li>
 
     </ul>
   </section>
@@ -201,15 +206,15 @@
   <section>
     <div class="container">
       <div class="card">
-    <h2>Auditor Conduct & Disclosure</h2>
-    <ul>
-<li>
-  Auditors do not disclose personal employee details such as age,
-  contact information, or educational background in reports unless explicitly required.
-</li>
-      <li>Auditors operate under internal confidentiality and neutrality policies.</li>
-      <li>Clients are expected to treat auditors with professional respect.</li>
-    </ul>
+        <h2>Auditor Conduct & Disclosure</h2>
+        <ul>
+          <li>
+            Auditors do not disclose personal employee details such as age,
+            contact information, or educational background in reports unless explicitly required.
+          </li>
+          <li>Auditors operate under internal confidentiality and neutrality policies.</li>
+          <li>Clients are expected to treat auditors with professional respect.</li>
+        </ul>
       </div>
     </div>
   </section>
@@ -222,8 +227,8 @@
       <li>Arrange travel, accommodation, food, and local transport for on-site audits.</li>
       <li>Refrain from influencing or pressuring auditors.</li>
       <li>
-  Delays or restrictions in access may impact audit timelines and depth.
-</li>
+        Delays or restrictions in access may impact audit timelines and depth.
+      </li>
 
     </ul>
   </section>
@@ -231,21 +236,21 @@
   <section>
     <div class="container">
       <div class="card">
-    <h2>Impact & Use of Findings</h2>
-    <p>
-      Audit outcomes may be considered as one of multiple inputs
-in organizational decision-making processes.
+        <h2>Impact & Use of Findings</h2>
+        <p>
+          Audit outcomes may be considered as one of multiple inputs
+          in organizational decision-making processes.
 
-    </p>
-    <p>
-  VEXOR does not mediate disputes, justify prior decisions,
-  or provide validation for predetermined outcomes.
-</p>
-<p>
-  Team and organizational insights reflect systemic patterns,
-  structural conditions, and aggregated risk signals.
-  They are not representations of individual performance or intent.
-</p>
+        </p>
+        <p>
+          VEXOR does not mediate disputes, justify prior decisions,
+          or provide validation for predetermined outcomes.
+        </p>
+        <p>
+          Team and organizational insights reflect systemic patterns,
+          structural conditions, and aggregated risk signals.
+          They are not representations of individual performance or intent.
+        </p>
 
       </div>
     </div>
@@ -286,8 +291,8 @@ in organizational decision-making processes.
       <li>Discussion fees are non-refundable.</li>
       <li>Pricing may vary based on scope, location, and customization.</li>
       <li>
-  All payments are processed through approved payment platforms.
-</li>
+        All payments are processed through approved payment platforms.
+      </li>
 
     </ul>
   </section>
@@ -297,35 +302,36 @@ in organizational decision-making processes.
   <section>
     <div class="container">
       <div class="card">
-    <h2>Limitations</h2>
-    <p>
-      Audits represent an assessment at a specific point in time. Changes in personnel, structure, or business conditions after the audit may affect relevance.
-    </p>
-    <div class="notice">
-      <strong>Disclaimer:</strong> VEXOR shall not be liable for any direct, indirect, incidental,
-or consequential outcomes arising from reliance on audit findings.
-    </div>
+        <h2>Limitations</h2>
+        <p>
+          Audits represent an assessment at a specific point in time. Changes in personnel, structure, or business
+          conditions after the audit may affect relevance.
+        </p>
+        <div class="notice">
+          <strong>Disclaimer:</strong> VEXOR shall not be liable for any direct, indirect, incidental,
+          or consequential outcomes arising from reliance on audit findings.
+        </div>
       </div>
     </div>
   </section>
 
   <section>
-  <h2>Engagement Eligibility</h2>
-  <p>
-    VEXOR reserves the right to decline or terminate engagements
-    where independence, safety, ethical standards, or professional
-    objectivity cannot be reasonably maintained.
-  </p>
-</section>
+    <h2>Engagement Eligibility</h2>
+    <p>
+      VEXOR reserves the right to decline or terminate engagements
+      where independence, safety, ethical standards, or professional
+      objectivity cannot be reasonably maintained.
+    </p>
+  </section>
 
-<section>
-  <h2>Governing Law & Jurisdiction</h2>
-  <p>
-    All engagements and disputes shall be governed by the laws of India.
-    Jurisdiction shall lie exclusively with courts located in New Delhi,
-    unless otherwise agreed in writing.
-  </p>
-</section>
+  <section>
+    <h2>Governing Law & Jurisdiction</h2>
+    <p>
+      All engagements and disputes shall be governed by the laws of India.
+      Jurisdiction shall lie exclusively with courts located in New Delhi,
+      unless otherwise agreed in writing.
+    </p>
+  </section>
 
 
   <div id="footer"></div>
@@ -333,4 +339,5 @@ or consequential outcomes arising from reliance on audit findings.
   <script src="assets/js/include.js"></script>
 
 </body>
+
 </html>
