--- a/methodology.html
+++ b/methodology.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Methodology | VEXOR</title>
+  <title>Audit Methodology | Evidence-Based Workforce Evaluation | VEXOR</title>
+  <meta name="description"
+    content="Learn how VEXOR conducts structured, evidence-based workforce and organizational audits without advisory or implementation bias." />
 
-  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600&display=swap"
+    rel="stylesheet">
 
   <style>
     :root {
@@ -30,7 +34,8 @@
       line-height: 1.7;
     }
 
-    header, section {
+    header,
+    section {
       padding: 60px 6%;
     }
 
@@ -139,170 +144,178 @@
       color: var(--text-main);
     }
   </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
 
-<div id="header"></div>
+  <div id="header"></div>
 
-<header>
-  <div class="container">
-    <h1>Audit Methodology</h1>
-    <p>
-      VEXOR follows a structured, evidence-driven audit methodology designed to surface capability, execution, and readiness risks indicators.
-      The methodology prioritizes observation and validation over opinion or advisory judgment.
-    </p>
-    <p>
-      This page outlines how audits are conducted — without disclosing proprietary tools or internal scoring mechanisms.
-    </p>
-  </div>
-</header>
+  <header>
+    <div class="container">
+      <h1>Audit Methodology</h1>
+      <p>
+        VEXOR follows a structured, evidence-driven audit methodology designed to surface capability, execution, and
+        readiness risks indicators.
+        The methodology prioritizes observation and validation over opinion or advisory judgment.
+      </p>
+      <p>
+        This page outlines how audits are conducted — without disclosing proprietary tools or internal scoring
+        mechanisms.
+      </p>
+    </div>
+  </header>
 
-<hr class="divider">
+  <hr class="divider">
 
-<section>
-  <div class="container">
-    <h2>Methodological Principles</h2>
+  <section>
+    <div class="container">
+      <h2>Methodological Principles</h2>
 
-    <div class="card">
-      <ul>
-        <li><strong>Evaluation over advice:</strong> Audits focus on what exists, not what should be done.</li>
-        <li><strong>Evidence before interpretation:</strong> Observations are grounded in verifiable signals.</li>
-        <li><strong>Multiple signal validation:</strong> No single data point drives conclusions.</li>
-        <li><strong>Independence:</strong> VEXOR does not participate in implementation or decision execution.</li>
-        <li><strong>Context awareness:</strong> Capability is assessed relative to role, scale, and operating environment.</li>
-      </ul>
+      <div class="card">
+        <ul>
+          <li><strong>Evaluation over advice:</strong> Audits focus on what exists, not what should be done.</li>
+          <li><strong>Evidence before interpretation:</strong> Observations are grounded in verifiable signals.</li>
+          <li><strong>Multiple signal validation:</strong> No single data point drives conclusions.</li>
+          <li><strong>Independence:</strong> VEXOR does not participate in implementation or decision execution.</li>
+          <li><strong>Context awareness:</strong> Capability is assessed relative to role, scale, and operating
+            environment.</li>
+        </ul>
+        <p class="note">
+          VEXOR audits do not assign individual ratings, labels, or judgments.
+          Individual-level observations, where applicable, are contextual,
+          non-evaluative, and used solely to understand systemic patterns.
+        </p>
+
+      </div>
+    </div>
+  </section>
+
+  <hr class="divider">
+
+  <section>
+    <div class="container">
+      <h2>Audit Phases</h2>
+
+      <div class="card">
+        <h3>1. Context & Scope Definition</h3>
+        <p>
+          Each audit begins with scope clarification to establish boundaries, intent, and evaluation criteria.
+          This phase ensures the audit remains evaluative and does not drift into advisory territory.
+        </p>
+        <ul>
+          <li>Role, team, or system boundary definition</li>
+          <li>Operating context review</li>
+          <li>Risk areas and focus zones identification</li>
+        </ul>
+      </div>
+
+      <div class="card">
+        <h3>2. Signal Collection</h3>
+        <p>
+          Audits rely on structured signal collection rather than self-reported performance claims.
+        </p>
+        <ul>
+          <li>Observed operational and decision-making behaviors</li>
+          <li>Decision ownership patterns</li>
+          <li>Execution artifacts and outputs</li>
+          <li>Interaction and dependency signals</li>
+        </ul>
+        <p class="note">
+          Tools and instruments vary by audit type and are selected based on relevance, not standardization.
+        </p>
+      </div>
+
+      <div class="card">
+        <h3>3. Triangulation & Validation</h3>
+        <p>
+          Observations are validated by cross-referencing multiple independent signals to reduce bias and false
+          conclusions.
+        </p>
+        <ul>
+          <li>Cross-role consistency checks</li>
+          <li>Declared vs observed behavior comparison</li>
+          <li>Output vs accountability alignment</li>
+        </ul>
+      </div>
+
+      <div class="card">
+        <h3>4. Risk & Readiness Assessment</h3>
+        <p>
+          Findings are framed in terms of risk exposure and readiness rather than performance ratings.
+        </p>
+        <ul>
+          <li>Capability coverage gaps</li>
+          <li>Execution bottlenecks</li>
+          <li>Structural or leadership stress points</li>
+          <li>Future scalability risks</li>
+        </ul>
+        <p class="note">
+          Any internal scoring or normalization processes, where used, are
+          analytical tools and are not disclosed or interpreted as ratings
+          of individuals or teams.
+        </p>
+
+      </div>
+
+      <div class="card">
+        <h3>5. Reporting</h3>
+        <p>
+          Audit outputs present factual observations and risk indicators without prescriptive recommendations.
+        </p>
+        <ul>
+          <li>Documented findings</li>
+          <li>Observed patterns and inconsistencies</li>
+          <li>Risk exposure summaries</li>
+        </ul>
+        <p class="note">
+          Decisions, actions, and implementations remain the responsibility of leadership.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <hr class="divider">
+
+  <section>
+    <div class="container">
+      <h2>What This Methodology Does Not Do</h2>
+
+      <div class="card">
+        <ul>
+          <li>Does not provide coaching, consulting, or implementation plans</li>
+          <li>Does not guarantee outcomes or business results</li>
+          <li>Does not replace leadership judgment or accountability</li>
+          <li>Does not function as a performance appraisal system</li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
+  <hr class="divider">
+
+  <section>
+    <div class="container">
+      <h2>Applicability Across Audit Types</h2>
+      <p>
+        While the core methodology remains consistent, execution depth and signal selection vary across employee, team,
+        and organization audits.
+      </p>
       <p class="note">
-  VEXOR audits do not assign individual ratings, labels, or judgments.
-  Individual-level observations, where applicable, are contextual,
-  non-evaluative, and used solely to understand systemic patterns.
-</p>
-
-    </div>
-  </div>
-</section>
-
-<hr class="divider">
-
-<section>
-  <div class="container">
-    <h2>Audit Phases</h2>
-
-    <div class="card">
-      <h3>1. Context & Scope Definition</h3>
-      <p>
-        Each audit begins with scope clarification to establish boundaries, intent, and evaluation criteria.
-        This phase ensures the audit remains evaluative and does not drift into advisory territory.
+        Organization-wide audits require mandatory pre-engagement discussion due to scale and systemic impact.
       </p>
-      <ul>
-        <li>Role, team, or system boundary definition</li>
-        <li>Operating context review</li>
-        <li>Risk areas and focus zones identification</li>
-      </ul>
-    </div>
-
-    <div class="card">
-      <h3>2. Signal Collection</h3>
-      <p>
-        Audits rely on structured signal collection rather than self-reported performance claims.
-      </p>
-      <ul>
-        <li>Observed operational and decision-making behaviors</li>
-        <li>Decision ownership patterns</li>
-        <li>Execution artifacts and outputs</li>
-        <li>Interaction and dependency signals</li>
-      </ul>
       <p class="note">
-        Tools and instruments vary by audit type and are selected based on relevance, not standardization.
+        Access to audit outputs varies by scope and authority.
+        Individual-level insights, where generated, are confidential
+        and shared only with designated decision authorities.
       </p>
-    </div>
-
-    <div class="card">
-      <h3>3. Triangulation & Validation</h3>
-      <p>
-        Observations are validated by cross-referencing multiple independent signals to reduce bias and false conclusions.
-      </p>
-      <ul>
-        <li>Cross-role consistency checks</li>
-        <li>Declared vs observed behavior comparison</li>
-        <li>Output vs accountability alignment</li>
-      </ul>
-    </div>
-
-    <div class="card">
-      <h3>4. Risk & Readiness Assessment</h3>
-      <p>
-        Findings are framed in terms of risk exposure and readiness rather than performance ratings.
-      </p>
-      <ul>
-        <li>Capability coverage gaps</li>
-        <li>Execution bottlenecks</li>
-        <li>Structural or leadership stress points</li>
-        <li>Future scalability risks</li>
-      </ul>
-      <p class="note">
-  Any internal scoring or normalization processes, where used, are
-  analytical tools and are not disclosed or interpreted as ratings
-  of individuals or teams.
-</p>
 
     </div>
+  </section>
 
-    <div class="card">
-      <h3>5. Reporting</h3>
-      <p>
-        Audit outputs present factual observations and risk indicators without prescriptive recommendations.
-      </p>
-      <ul>
-        <li>Documented findings</li>
-        <li>Observed patterns and inconsistencies</li>
-        <li>Risk exposure summaries</li>
-      </ul>
-      <p class="note">
-        Decisions, actions, and implementations remain the responsibility of leadership.
-      </p>
-    </div>
-  </div>
-</section>
-
-<hr class="divider">
-
-<section>
-  <div class="container">
-    <h2>What This Methodology Does Not Do</h2>
-
-    <div class="card">
-      <ul>
-        <li>Does not provide coaching, consulting, or implementation plans</li>
-        <li>Does not guarantee outcomes or business results</li>
-        <li>Does not replace leadership judgment or accountability</li>
-        <li>Does not function as a performance appraisal system</li>
-      </ul>
-    </div>
-  </div>
-</section>
-
-<hr class="divider">
-
-<section>
-  <div class="container">
-    <h2>Applicability Across Audit Types</h2>
-    <p>
-      While the core methodology remains consistent, execution depth and signal selection vary across employee, team, and organization audits.
-    </p>
-    <p class="note">
-      Organization-wide audits require mandatory pre-engagement discussion due to scale and systemic impact.
-    </p>
-    <p class="note">
-  Access to audit outputs varies by scope and authority.
-  Individual-level insights, where generated, are confidential
-  and shared only with designated decision authorities.
-</p>
-
-  </div>
-</section>
-
-<div id="footer"></div>
-<script src="assets/js/include.js"></script>
+  <div id="footer"></div>
+  <script src="assets/js/include.js"></script>
 
 </body>
+
 </html>
