--- a/packages.html
+++ b/packages.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Packages | VEXOR</title>
+  <title>Audit Packages | Independent Workforce & Capability Audits | VEXOR</title>
+  <meta name="description"
+    content="View VEXOR’s structured audit packages for employees, teams, and organizations designed for leadership clarity." />
 
-  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600&display=swap"
+    rel="stylesheet">
 
   <style>
     :root {
@@ -171,164 +175,172 @@
       color: var(--text-main);
     }
   </style>
+  <link rel="stylesheet" href="styles.css">
   <script src="assets/js/pricing.js"></script>
 </head>
+
 <body>
 
-<div id="header"></div>
+  <div id="header"></div>
 
-<header>
-  <h1>Engagement Packages</h1>
-  <p>
-    VEXOR packages define structured entry points into professional audits.
-    Final scope, depth, and commercial terms are confirmed only after evaluation discussion.
-  </p>
-</header>
+  <header>
+    <h1>Engagement Packages</h1>
+    <p>
+      VEXOR packages define structured entry points into professional audits.
+      Final scope, depth, and commercial terms are confirmed only after evaluation discussion.
+    </p>
+  </header>
 
-<section>
-  <p>
-    VEXOR packages represent structured entry points — not fixed products.
-    Each engagement is governed by professional judgment, contextual complexity,
-    and risk exposure rather than feature inclusion.
-  </p>
-  <p class="note">
-  Package descriptions indicate typical engagement patterns.
-  Final scope, depth, methodology, and deliverables are confirmed
-  only through professional discussion and formal engagement terms.
-</p>
-
-</section>
-
-
-<!-- EMPLOYEE AUDIT -->
-<section>
-  <h2>Employee Audit</h2>
-  <p>Individual capability and role-alignment evaluation.</p>
-  <p class="note">
-    Employee Audits are conducted for organizational decision support.
-    Findings are delivered only to authorized client representatives
-    and are not intended as performance appraisals or employee disclosures.
-  </p>
-
-
-  <div class="grid">
-    <div class="card">
-      <h3>Basic</h3>
-      <div class="price">Indicative: <span style="font-size: 26px;font-weight: 600;color: var(--text-main);" data-price="employee.basic"></span> <span>/ employee</span></div>
-      <ul>
-        <li>~45 evaluation attributes</li>
-        <li>Role–skill alignment</li>
-        <li>Structured interview</li>
-        <li>Signal-based scoring indicators</li>
-      </ul>
-      <a href="request-discussion.html" class="cta">Request Discussion</a>
-    </div>
-
-    <div class="card">
-      <h3>Standard</h3>
-      <div class="price">Indicative: <span style="font-size: 26px;font-weight: 600;color: var(--text-main);" data-price="employee.standard"></span> <span class="price-unit">/ employee</span></div>
-      <ul>
-        <li>~85 evaluation attributes</li>
-        <li>Behavior & execution signals</li>
-        <li>Cognitive risk indicators</li>
-        <li>Expanded evaluator remarks</li>
-      </ul>
-      <a href="request-discussion.html" class="cta">Request Discussion</a>
-    </div>
-
-    <div class="card highlight">
-      <h3>Advanced</h3>
-      <div class="price">Indicative: <span style="font-size: 26px;font-weight: 600;color: var(--text-main);" data-price="employee.advanced"></span> <span class="price-unit">/ employee</span></div>
-      <ul>
-        <li>120+ evaluation attributes</li>
-        <li>Future-readiness analysis</li>
-        <li>Risk & growth indicators</li>
-        <li>Detailed evaluator notes</li>
-      </ul>
-      <a href="request-discussion.html" class="cta">Request Discussion</a>
-    </div>
-  </div>
-</section>
-
-<!-- TEAM AUDIT -->
-<section>
-  <h2>Team Audit (6 Members)</h2>
-  <p>Capability and execution audit for intact working teams.</p>
-
-  <div class="grid">
-    <div class="card">
-      <h3>Team Core</h3>
-      <div class="price">Indicative: <span style="font-size: 26px;font-weight: 600;color: var(--text-main);" data-price="team.core"></span> <span class="price-unit">/ team</span></div>
-      <ul>
-        <li>Fixed team size: 6 members</li>
-        <li>Individual + team-level audit</li>
-        <li>Collaboration & delivery review</li>
-        <li>Team summary report</li>
-      </ul>
-      <a href="request-discussion.html" class="cta">Request Discussion</a>
-    </div>
-
-    <div class="card highlight">
-      <h3>Team Strategic</h3>
-      <div class="price">Indicative: <span style="font-size: 26px;font-weight: 600;color: var(--text-main);" data-price="team.strategic"></span> <span class="price-unit">/ team</span></div>
-      <ul>
-        <li>Advanced individual audits</li>
-        <li>Leadership & ownership signals</li>
-        <li>Execution bottleneck mapping</li>
-        <li>Decision-support team insights</li>
-      </ul>
-      <a href="request-discussion.html" class="cta">Request Discussion</a>
-    </div>
-  </div>
-  <p class="note">
-  Team audits focus on collective execution patterns and structural dynamics.
-  Individual observations, where included, are contextual and non-evaluative.
-</p>
-
-</section>
-
-<!-- ORGANIZATION AUDIT -->
-<section>
-  <h2>Organization Audit</h2>
-  <p>
-    Organization-wide audits are conducted only as customized engagements
-    based on size, structure, and strategic objectives.
-  </p>
-
-  <div class="card">
-    <ul>
-      <li>Leadership & structure evaluation</li>
-      <li>Cross-team capability analysis</li>
-      <li>Systemic risk identification</li>
-      <li>Decision-oriented strategic clarity</li>
-      <li>Optional internal organizational classification (A/B/C)</li>
-    </ul>
+  <section>
+    <p>
+      VEXOR packages represent structured entry points — not fixed products.
+      Each engagement is governed by professional judgment, contextual complexity,
+      and risk exposure rather than feature inclusion.
+    </p>
     <p class="note">
-  Organizational classifications are internal analytical constructs
-  intended solely for client decision-making and comparative context.
-  They do not represent certifications, rankings, or public endorsements.
-</p>
-
-
-    <p><strong>Pricing:</strong> Defined post evaluation discussion</p>
-    <p class="mandatory">
-      Mandatory professional discussion required before any organization-wide engagement.
+      Package descriptions indicate typical engagement patterns.
+      Final scope, depth, methodology, and deliverables are confirmed
+      only through professional discussion and formal engagement terms.
     </p>
 
-    <a href="request-discussion.html" class="cta">Request Discussion</a>
-  </div>
+  </section>
 
-  <p class="note">
-    * Prices are indicative. Final commercial terms depend on scope, depth, location,
-    and audit format. Travel, stay, food, and local transport are arranged by the client
-    for on-site engagements.
-  </p>
-</section>
 
-<div id="footer"></div>
+  <!-- EMPLOYEE AUDIT -->
+  <section>
+    <h2>Employee Audit</h2>
+    <p>Individual capability and role-alignment evaluation.</p>
+    <p class="note">
+      Employee Audits are conducted for organizational decision support.
+      Findings are delivered only to authorized client representatives
+      and are not intended as performance appraisals or employee disclosures.
+    </p>
+
+
+    <div class="grid">
+      <div class="card">
+        <h3>Basic</h3>
+        <div class="price">Indicative: <span style="font-size: 26px;font-weight: 600;color: var(--text-main);"
+            data-price="employee.basic"></span> <span>/ employee</span></div>
+        <ul>
+          <li>~45 evaluation attributes</li>
+          <li>Role–skill alignment</li>
+          <li>Structured interview</li>
+          <li>Signal-based scoring indicators</li>
+        </ul>
+        <a href="request-discussion.html" class="cta">Request Discussion</a>
+      </div>
+
+      <div class="card">
+        <h3>Standard</h3>
+        <div class="price">Indicative: <span style="font-size: 26px;font-weight: 600;color: var(--text-main);"
+            data-price="employee.standard"></span> <span class="price-unit">/ employee</span></div>
+        <ul>
+          <li>~85 evaluation attributes</li>
+          <li>Behavior & execution signals</li>
+          <li>Cognitive risk indicators</li>
+          <li>Expanded evaluator remarks</li>
+        </ul>
+        <a href="request-discussion.html" class="cta">Request Discussion</a>
+      </div>
+
+      <div class="card highlight">
+        <h3>Advanced</h3>
+        <div class="price">Indicative: <span style="font-size: 26px;font-weight: 600;color: var(--text-main);"
+            data-price="employee.advanced"></span> <span class="price-unit">/ employee</span></div>
+        <ul>
+          <li>120+ evaluation attributes</li>
+          <li>Future-readiness analysis</li>
+          <li>Risk & growth indicators</li>
+          <li>Detailed evaluator notes</li>
+        </ul>
+        <a href="request-discussion.html" class="cta">Request Discussion</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- TEAM AUDIT -->
+  <section>
+    <h2>Team Audit (6 Members)</h2>
+    <p>Capability and execution audit for intact working teams.</p>
+
+    <div class="grid">
+      <div class="card">
+        <h3>Team Core</h3>
+        <div class="price">Indicative: <span style="font-size: 26px;font-weight: 600;color: var(--text-main);"
+            data-price="team.core"></span> <span class="price-unit">/ team</span></div>
+        <ul>
+          <li>Fixed team size: 6 members</li>
+          <li>Individual + team-level audit</li>
+          <li>Collaboration & delivery review</li>
+          <li>Team summary report</li>
+        </ul>
+        <a href="request-discussion.html" class="cta">Request Discussion</a>
+      </div>
+
+      <div class="card highlight">
+        <h3>Team Strategic</h3>
+        <div class="price">Indicative: <span style="font-size: 26px;font-weight: 600;color: var(--text-main);"
+            data-price="team.strategic"></span> <span class="price-unit">/ team</span></div>
+        <ul>
+          <li>Advanced individual audits</li>
+          <li>Leadership & ownership signals</li>
+          <li>Execution bottleneck mapping</li>
+          <li>Decision-support team insights</li>
+        </ul>
+        <a href="request-discussion.html" class="cta">Request Discussion</a>
+      </div>
+    </div>
+    <p class="note">
+      Team audits focus on collective execution patterns and structural dynamics.
+      Individual observations, where included, are contextual and non-evaluative.
+    </p>
+
+  </section>
+
+  <!-- ORGANIZATION AUDIT -->
+  <section>
+    <h2>Organization Audit</h2>
+    <p>
+      Organization-wide audits are conducted only as customized engagements
+      based on size, structure, and strategic objectives.
+    </p>
+
+    <div class="card">
+      <ul>
+        <li>Leadership & structure evaluation</li>
+        <li>Cross-team capability analysis</li>
+        <li>Systemic risk identification</li>
+        <li>Decision-oriented strategic clarity</li>
+        <li>Optional internal organizational classification (A/B/C)</li>
+      </ul>
+      <p class="note">
+        Organizational classifications are internal analytical constructs
+        intended solely for client decision-making and comparative context.
+        They do not represent certifications, rankings, or public endorsements.
+      </p>
+
+
+      <p><strong>Pricing:</strong> Defined post evaluation discussion</p>
+      <p class="mandatory">
+        Mandatory professional discussion required before any organization-wide engagement.
+      </p>
+
+      <a href="request-discussion.html" class="cta">Request Discussion</a>
+    </div>
+
+    <p class="note">
+      * Prices are indicative. Final commercial terms depend on scope, depth, location,
+      and audit format. Travel, stay, food, and local transport are arranged by the client
+      for on-site engagements.
+    </p>
+  </section>
+
+  <div id="footer"></div>
 
   <script src="assets/js/include.js"></script>
   <script src="assets/js/pricing.js"></script>
 
 </body>
+
 </html>
