--- a/team-audit.html
+++ b/team-audit.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Team Audit | VEXOR</title>
-
-  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
-
+  <title>Team Audit | Leadership, Execution & Capability Assessment | VEXOR</title>
+  <meta name="description"
+    content="VEXOR’s Team Audit assesses leadership alignment, collaboration dynamics, execution readiness, and structural stress points." />
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
   <style>
     :root {
       --bg-dark: #0f1115;
@@ -100,10 +103,10 @@
     }
 
     .container {
-  max-width: 1100px;
-  margin: 0 auto;
-  padding: 0 24px;
-}
+      max-width: 1100px;
+      margin: 0 auto;
+      padding: 0 24px;
+    }
 
     .card {
       background: var(--bg-card);
@@ -174,6 +177,7 @@
     }
   </style>
 </head>
+
 <body>
 
   <!-- GLOBAL NAV -->
@@ -182,61 +186,62 @@
   <!-- PAGE HEADER -->
   <header>
     <h1>Team Audit</h1>
-    <p>A structured evaluation of how a defined team functions in reality — measuring coordination, accountability, leadership flow, and execution reliability beyond individual performance.</p>
+    <p>A structured evaluation of how a defined team functions in reality — measuring coordination, accountability,
+      leadership flow, and execution reliability beyond individual performance.</p>
   </header>
 
   <section>
     <h2>Why Organizations Conduct Team Audits</h2>
     <p>
-    Teams often appear functional on the surface while silently underperforming beneath it.
-    Ownership gaps, leadership ambiguity, and dependency failures rarely surface in individual reviews.
-  </p>
-  <p>
-    The Team Audit exists to expose these hidden execution risks before they turn into delivery failures or attrition.
-  </p>
+      Teams often appear functional on the surface while silently underperforming beneath it.
+      Ownership gaps, leadership ambiguity, and dependency failures rarely surface in individual reviews.
+    </p>
+    <p>
+      The Team Audit exists to expose these hidden execution risks before they turn into delivery failures or attrition.
+    </p>
   </section>
 
   <section>
     <div class="container">
       <div class="card">
-    <h2>This Audit Helps Answer</h2>
-    <ul>
-      <li>Does the team operate as a cohesive unit or as isolated contributors?</li>
-    <li>Are responsibilities clearly owned and consistently executed?</li>
-    <li>Is leadership present, effective, and respected?</li>
-    <li>Do role mismatches exist within the team structure?</li>
-    <li>Can the team scale with increasing complexity and expectations?</li>
-    </ul>
+        <h2>This Audit Helps Answer</h2>
+        <ul>
+          <li>Does the team operate as a cohesive unit or as isolated contributors?</li>
+          <li>Are responsibilities clearly owned and consistently executed?</li>
+          <li>Is leadership present, effective, and respected?</li>
+          <li>Do role mismatches exist within the team structure?</li>
+          <li>Can the team scale with increasing complexity and expectations?</li>
+        </ul>
       </div>
     </div>
   </section>
 
   <section>
-  <h2>Who This Is Typically For</h2>
-  <ul>
-    <li>Delivery-critical teams</li>
-    <li>Teams showing inconsistent output</li>
-    <li>Newly formed or recently restructured teams</li>
-    <li>Teams under leadership transition</li>
-    <li>High-cost teams with unclear performance impact</li>
-    <li>Cross-functional teams with shared accountability</li>
-  </ul>
-</section>
+    <h2>Who This Is Typically For</h2>
+    <ul>
+      <li>Delivery-critical teams</li>
+      <li>Teams showing inconsistent output</li>
+      <li>Newly formed or recently restructured teams</li>
+      <li>Teams under leadership transition</li>
+      <li>High-cost teams with unclear performance impact</li>
+      <li>Cross-functional teams with shared accountability</li>
+    </ul>
+  </section>
 
   <section>
     <div class="container">
       <div class="card">
-    <h2>Team Evaluation Dimensions</h2>
-    <ul>
-      <li>Role clarity and accountability ownership</li>
-    <li>Inter-member dependencies and collaboration health</li>
-    <li>Decision-making flow and authority clarity</li>
-    <li>Communication effectiveness</li>
-    <li>Conflict handling and resolution maturity</li>
-    <li>Leadership presence and influence</li>
-    <li>Execution discipline and reliability</li>
-    <li>Alignment with organizational direction</li>
-    </ul>
+        <h2>Team Evaluation Dimensions</h2>
+        <ul>
+          <li>Role clarity and accountability ownership</li>
+          <li>Inter-member dependencies and collaboration health</li>
+          <li>Decision-making flow and authority clarity</li>
+          <li>Communication effectiveness</li>
+          <li>Conflict handling and resolution maturity</li>
+          <li>Leadership presence and influence</li>
+          <li>Execution discipline and reliability</li>
+          <li>Alignment with organizational direction</li>
+        </ul>
       </div>
     </div>
   </section>
@@ -275,27 +280,27 @@
     <p>The Team Audit follows a fixed structure to ensure consistency and comparability.</p>
     <div class="grid">
       <div>
-      <p><strong>Team Size:</strong> Fixed at 6 members</p>
-      <p><strong>Interaction Model:</strong> Individual interviews with team-context analysis</p>
-    </div>
-    <div>
-      <p><strong>Assessment Focus:</strong> Individual contribution vs collective execution</p>
-      <p><strong>Customization:</strong> Based on team function and role composition</p>
-    </div>
+        <p><strong>Team Size:</strong> Fixed at 6 members</p>
+        <p><strong>Interaction Model:</strong> Individual interviews with team-context analysis</p>
+      </div>
+      <div>
+        <p><strong>Assessment Focus:</strong> Individual contribution vs collective execution</p>
+        <p><strong>Customization:</strong> Based on team function and role composition</p>
+      </div>
     </div>
   </section>
 
   <section>
     <div class="container">
       <div class="card">
-    <h2>Audit Methodology</h2>
-    <ul>
-      <li>Pre-audit understanding of team objectives and structure</li>
-    <li>Customized evaluation scenarios mapped to team roles</li>
-    <li>Independent interviews conducted confidentially</li>
-    <li>Cross-analysis of responses and observed patterns</li>
-    <li>Scoring using internal team-performance frameworks</li>
-    </ul>
+        <h2>Audit Methodology</h2>
+        <ul>
+          <li>Pre-audit understanding of team objectives and structure</li>
+          <li>Customized evaluation scenarios mapped to team roles</li>
+          <li>Independent interviews conducted confidentially</li>
+          <li>Cross-analysis of responses and observed patterns</li>
+          <li>Scoring using internal team-performance frameworks</li>
+        </ul>
       </div>
     </div>
   </section>
@@ -304,10 +309,10 @@
     <h2>Deliverables</h2>
     <ul>
       <li>Team capability and execution overview</li>
-    <li>Role-wise contribution and dependency analysis</li>
-    <li>Identified structural and behavioral risks</li>
-    <li>Leadership and coordination insights</li>
-    <li>Actionable risk and improvement indicators (non-prescriptive)</li>
+      <li>Role-wise contribution and dependency analysis</li>
+      <li>Identified structural and behavioral risks</li>
+      <li>Leadership and coordination insights</li>
+      <li>Actionable risk and improvement indicators (non-prescriptive)</li>
     </ul>
     <p>Audit findings remain valid for <strong>6 months</strong>.</p>
   </section>
@@ -331,25 +336,25 @@
   <section>
     <div class="container">
       <div class="card">
-    <h2>Engagement & Conduct Guidelines</h2>
-    <ul>
-      <li>Team size is fixed at six members; variations can be discussed separately.</li>
-    <li>Travel, accommodation, food, and local transport for on-site audits are borne by the client.</li>
-    <li>Auditors do not disclose personal or professional background details.</li>
-    <li>Participants are expected to cooperate honestly and professionally.</li>
-    <li>Findings may influence restructuring, leadership changes, or role adjustments.</li>
-    </ul>
+        <h2>Engagement & Conduct Guidelines</h2>
+        <ul>
+          <li>Team size is fixed at six members; variations can be discussed separately.</li>
+          <li>Travel, accommodation, food, and local transport for on-site audits are borne by the client.</li>
+          <li>Auditors do not disclose personal or professional background details.</li>
+          <li>Participants are expected to cooperate honestly and professionally.</li>
+          <li>Findings may influence restructuring, leadership changes, or role adjustments.</li>
+        </ul>
 
-    <section>
-      <p class="note">
-        Detailed scoring mechanics, dependency models, and evaluator calibration
-        frameworks are maintained as internal audit appendices and are not
-        distributed as part of standard client deliverables.
-      </p>
-    </section>
+        <section>
+          <p class="note">
+            Detailed scoring mechanics, dependency models, and evaluator calibration
+            frameworks are maintained as internal audit appendices and are not
+            distributed as part of standard client deliverables.
+          </p>
+        </section>
 
-    <a href="request-discussion.html" class="cta">Request a Professional Evaluation Discussion</a>
-  
+        <a href="request-discussion.html" class="cta">Request a Professional Evaluation Discussion</a>
+
       </div>
     </div>
   </section>
@@ -359,4 +364,5 @@
   <script src="assets/js/include.js"></script>
 
 </body>
+
 </html>
