--- a/terms.html
+++ b/terms.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Terms & Conditions | VEXOR</title>
@@ -29,82 +30,89 @@
     }
   </style>
 </head>
+
 <body>
 
-<div id="header"></div>
+  <div id="header"></div>
 
-<section style="padding:60px 6%; max-width:900px;">
-  <h1>Terms & Conditions</h1><br>
+  <section style="padding:60px 6%; max-width:900px;">
+    <h1>Terms & Conditions</h1><br>
 
-  <h2>Nature of Services</h2>
-  <p>
-    VEXOR provides independent, evaluative organizational and workforce-level audits.
-Services are diagnostic and analytical in nature and do not constitute consulting,
-legal, financial, HR advisory, or individual performance evaluation services.
+    <h2>Nature of Services</h2>
+    <p>
+      VEXOR provides independent, evaluative organizational and workforce-level audits.
+      Services are diagnostic and analytical in nature and do not constitute consulting,
+      legal, financial, HR advisory, or individual performance evaluation services.
 
-  </p><br>
+    </p><br>
 
-  <h2>Engagement & Scope</h2>
-  <p>
-    Each engagement is governed by a defined scope, methodology, timeline, and commercial terms agreed prior to initiation. Any work outside the agreed scope requires explicit confirmation.
-  </p><br>
-  <p>
-  In the event of any conflict, formally executed engagement-specific
-  agreements shall prevail over these general terms.
-</p><br>
-
-
-  <h2>Fees & Payments</h2>
-  <p>
-    Discussion fees, where applicable, cover time allocated for engagement
-qualification and are non-refundable.
- Audit fees are payable as per agreed milestones. Reports may be withheld until full payment is received.
-  </p><br>
-
-  <h2>Use of Reports & Intellectual Property</h2>
-  <p>
-    All audit reports and materials remain the intellectual property of VEXOR. Clients may use findings internally for decision-making purposes but may not
-reproduce, distribute, summarize, extract, or publish reports or derivative
-materials without prior written consent.
-
-  </p><br>
-
-  <h2>Limitation of Liability</h2>
-  <p>
-    VEXOR shall not be liable for decisions, actions, or outcomes arising from
-the use or interpretation of audit findings. In no event shall VEXOR be
-liable for indirect, incidental, consequential, or reputational damages.
-Any liability, if established, shall be limited to the fees paid for the
-specific engagement.
-
-  </p><br>
-
-  <h2>Termination</h2>
-  <p>
-    VEXOR reserves the right to terminate an engagement if cooperation is withheld, information is misrepresented, or professional boundaries are compromised.
-  </p><br>
-  <p>
-  Termination does not relieve the client of payment obligations
-  for work completed up to the termination date.
-</p><br>
+    <h2>Engagement & Scope</h2>
+    <p>
+      Each engagement is governed by a defined scope, methodology, timeline, and commercial terms agreed prior to
+      initiation. Any work outside the agreed scope requires explicit confirmation.
+    </p><br>
+    <p>
+      In the event of any conflict, formally executed engagement-specific
+      agreements shall prevail over these general terms.
+    </p><br>
 
 
-  <h2>Governing Law</h2>
-  <p>
-    These terms shall be governed by and construed in accordance with applicable laws of the jurisdiction in which VEXOR maintains
-its principal operations.
+    <h2>Fees & Payments</h2>
+    <p>
+      Discussion fees, where applicable, cover time allocated for engagement
+      qualification and are non-refundable.
+      Audit fees are payable as per agreed milestones. Reports may be withheld until full payment is received.
+    </p><br>
 
-  </p><br>
+    <h2>Use of Reports & Intellectual Property</h2>
+    <p>
+      All audit reports and materials remain the intellectual property of VEXOR. Clients may use findings internally for
+      decision-making purposes but may not
+      reproduce, distribute, summarize, extract, or publish reports or derivative
+      materials without prior written consent.
 
-  <h2>Acceptance of Terms</h2>
-  <p>
-    By requesting a discussion or entering into an engagement, clients acknowledge that they have read, understood, and accepted these terms.
-  </p>
-</section>
+    </p><br>
+
+    <h2>Limitation of Liability</h2>
+    <p>
+      VEXOR shall not be liable for decisions, actions, or outcomes arising from
+      the use or interpretation of audit findings. In no event shall VEXOR be
+      liable for indirect, incidental, consequential, or reputational damages.
+      Any liability, if established, shall be limited to the fees paid for the
+      specific engagement.
+
+    </p><br>
+
+    <h2>Termination</h2>
+    <p>
+      VEXOR reserves the right to terminate an engagement if cooperation is withheld, information is misrepresented, or
+      professional boundaries are compromised.
+    </p><br>
+    <p>
+      Termination does not relieve the client of payment obligations
+      for work completed up to the termination date.
+    </p><br>
 
 
-<div id="footer"></div>
-<script src="assets/js/include.js"></script>
+    <h2>Governing Law</h2>
+    <p>
+      These terms shall be governed by and construed in accordance with applicable laws of the jurisdiction in which
+      VEXOR maintains
+      its principal operations.
+
+    </p><br>
+
+    <h2>Acceptance of Terms</h2>
+    <p>
+      By requesting a discussion or entering into an engagement, clients acknowledge that they have read, understood,
+      and accepted these terms.
+    </p>
+  </section>
+
+
+  <div id="footer"></div>
+  <script src="assets/js/include.js"></script>
 
 </body>
+
 </html>
